[tool.poetry]
name = "pineapplepag"
version = "0.1.0"
description = ""
authors = ["Faris Chebib <faris@theluckybead.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
ormar = "^0.12.2"
uvicorn = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
